WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245432
[Mail Compose] Attachment goes missing after wrapping an image in a block quote
https://bugs.webkit.org/show_bug.cgi?id=245432
Summary
[Mail Compose] Attachment goes missing after wrapping an image in a block quote
Wenson Hsieh
Reported
2022-09-20 09:48:21 PDT
rdar://98012376
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-09-20 10:03:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4535
EWS
Comment 2
2022-09-20 15:41:16 PDT
Committed
254696@main
(47fb3d640ece): <
https://commits.webkit.org/254696@main
> Reviewed commits have been landed. Closing PR #4535 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug